--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Project</title>
-  <link rel="stylesheet" href="style.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | India The Golden Bird</title>
+    <link rel="icon" href="assets/logo.png" type="image/png" sizes="30x30">
+    <link rel="stylesheet" href="style.css">
+  </head>  
 <body>
 
-  <h1>Hello, World!</h1>
-  <p>This is my first HTML and CSS project.</p>
-
+  
 </body>
 </html>
